--- a/node-fastify/package.json
+++ b/node-fastify/package.json
@@ -1,20 +1,26 @@
 {
+  "name": "node-fastify",
+  "version": "1.0.0",
+  "description": "",
+  "main": "index.js",
   "scripts": {
     "dev": "tsx watch src/index.ts",
     "seed": "tsx run drizzle/seed.ts",
     "migrate": "tsx run drizzle/migrate.ts",
     "generate": "drizzle-kit generate:sqlite --schema ./drizzle/schema.ts"
   },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
   "dependencies": {
-    "@hono/node-server": "^1.8.1",
+    "fastify": "^4.26.1",
     "better-sqlite3": "^9.4.3",
-    "drizzle-orm": "^0.29.4",
-    "hono": "^4.0.7"
+    "drizzle-orm": "^0.29.4"
   },
   "devDependencies": {
     "@types/better-sqlite3": "^7.6.9",
     "@types/node": "^20.11.17",
     "drizzle-kit": "^0.20.14",
-    "tsx": "^3.12.2"
+    "tsx": "4.7.1"
   }
 }
